--- a/noteApp/index.css
+++ b/noteApp/index.css
@@ -1,10 +1,12 @@
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0px;
   font-family: 'Roboto', sans-serif; }
 
 #headerWrapper {
   width: 100%;
-  height: 100%;
+  height: 20%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,7 +20,8 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: flex-end; }
+    justify-content: flex-end;
+    padding-right: 20px; }
     #headerWrapper #headerButtons button {
       border: solid 2px blue;
       border-radius: 10px;
@@ -29,5 +32,36 @@ body {
     #headerWrapper #headerButtons button:hover {
       border: solid 2px black;
       color: black; }
+
+#noteBoard {
+  width: 80%;
+  height: 70%;
+  margin: 0 auto; }
+  #noteBoard .note {
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    background: #FFFFA5;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+    #noteBoard .note .noteText {
+      height: 80%;
+      width: 80%;
+      font-size: 20px; }
+    #noteBoard .note .noteButtons {
+      padding-left: 150px;
+      padding-bottom: 10px; }
+      #noteBoard .note .noteButtons button {
+        background: none;
+        border: none;
+        padding-right: 20px;
+        font-size: 1.3em; }
+      #noteBoard .note .noteButtons button:focus {
+        outline: none; }
+      #noteBoard .note .noteButtons button:hover {
+        color: blue; }
 
 /*# sourceMappingURL=index.css.map */
