--- a/noteApp/index.scss
+++ b/noteApp/index.scss
@@ -1,13 +1,19 @@
 $note: #FFFFA5;
 
 body{
+
+  height: 100vh;
+  width: 100vw;
+
   margin: 0px;
   font-family: 'Roboto', sans-serif;
+
+
 }
 
 #headerWrapper{
   width: 100%;
-  height: 100%;
+  height: 20%;
 
   display: flex;
   flex-direction: row;
@@ -29,6 +35,8 @@ body{
     align-items: center;
     justify-content: flex-end;
 
+    padding-right: 20px;
+
     button{
       border: solid 2px blue;
       border-radius: 10px;
@@ -41,5 +49,51 @@ body{
       border: solid 2px black;
       color: black;
     }
+  }
+}
+
+#noteBoard{
+
+  width: 80%;
+  height: 70%;
+  margin: 0 auto;
+
+  .note{
+    width: 250px;
+    height: 250px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 3px;
+    background: $note;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+
+    .noteText{
+      height: 80%;
+      width: 80%;
+      font-size: 20px;
+    }
+    .noteButtons{
+
+      padding-left: 150px;
+      padding-bottom: 10px;
+
+      button{
+        background: none;
+        border: none;
+        padding-right: 20px;
+        font-size: 1.3em;
+      }
+      button:focus{
+        outline: none;
+      }
+      button:hover{
+        color: blue;
+      }
+    }
+
   }
 }
